--- a/views/bucket-app/index.html
+++ b/views/bucket-app/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8"/>
 
     <title>Buy Part | Shop</title>
-    <base href="/"/>
+    <base href="/bucket"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="/bucket/assets/favicon.ico"/>
     <link rel="manifest" href="manifest.webmanifest"/>
 
     <script>
@@ -40,7 +40,7 @@
         z-index: 2;
       } */
     </style>
-  <link rel="stylesheet" href="styles.9ae523240585b7e24453.css"></head>
+  <link rel="stylesheet" href="/bucket/assets/project-buypart.ec06cddb04167da756c9.css"><link rel="stylesheet" href="/bucket/assets/theme-buypart.09bf657432e10501df5b.css"></head>
   <body>
     <div class="blur-bg">
       <span class="bg-span"></span>
@@ -51,7 +51,7 @@
     </div> -->
     <buypart-root></buypart-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <script src="runtime.093670b699d9f328df0d.js" defer></script><script src="polyfills.b537757174d3d2fd94dc.js" defer></script><script src="main.7e643829f662a3edee17.js" defer></script></body>
+  <script src="/bucket/assets/runtime.4190fd796d304ef2b5e2.js" defer></script><script src="/bucket/assets/polyfills.b537757174d3d2fd94dc.js" defer></script><script src="/bucket/assets/main.93be68586e13f5e67b0e.js" defer></script></body>
 </html>
 
 <!--screens
