--- a/views/bucket-app/index.html
+++ b/views/bucket-app/index.html
@@ -1,63 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-
-    <title>Buy Part | Shop</title>
-    <base href="/bucket"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="/bucket/assets/favicon.ico"/>
-    <link rel="manifest" href="manifest.webmanifest"/>
-
-    <script>
-      const APP_GLOBALS = {
-        buypart_loaded: false,
-      };
-    </script>
-
-    <style>
-      /*       
-      #screens{
-        margin: 0;
-        padding: 0;
-        position: fixed;
-        top:0;
-        left:0;
-        z-index: 2;
-        opacity: .5;
-      }
-
-      #screens img{
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        top:0;
-        left:0;
-      }
-
-      buypart-root{
-        position: relative;
-        z-index: 2;
-      } */
-    </style>
-  <link rel="stylesheet" href="/bucket/assets/project-buypart.ec06cddb04167da756c9.css"><link rel="stylesheet" href="/bucket/assets/theme-buypart.09bf657432e10501df5b.css"></head>
-  <body>
-    <div class="blur-bg">
-      <span class="bg-span"></span>
-    </div>
-  
-    <!-- <div id="screens">
-      <img src="libs/theme/assets/screens/1366x768-100.jpg" alt="">
-    </div> -->
-    <buypart-root></buypart-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <script src="/bucket/assets/runtime.4190fd796d304ef2b5e2.js" defer></script><script src="/bucket/assets/polyfills.b537757174d3d2fd94dc.js" defer></script><script src="/bucket/assets/main.93be68586e13f5e67b0e.js" defer></script></body>
-</html>
-
-<!--screens
-"X:\workflow\buypart\buypart-app\libs\theme\assets\screens\375x1072.jpg"
-"X:\workflow\buypart\buypart-app\libs\theme\assets\screens\768x1366.jpg"
-"X:\workflow\buypart\buypart-app\libs\theme\assets\screens\1024x768.jpg"
-"X:\workflow\buypart\buypart-app\libs\theme\assets\screens\1366x768-100.jpg"
-
--->
+<!doctype html><html lang="en"><head><base href="/bucket/"><meta charset="utf-8"/><link rel="icon" href="/bucket/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Bucket List Application"/><link rel="apple-touch-icon" href="/bucket/logo192.png"/><link rel="manifest" href="/bucket/manifest.json"/><title>Bucket List</title><link href="/bucket/static/css/main.2a50ca96.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,p=t[0],i=t[1],a=t[2],f=0,s=[];f<p.length;f++)l=p[f],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in i)Object.prototype.hasOwnProperty.call(i,n)&&(e[n]=i[n]);for(c&&c(t);s.length;)s.shift()();return u.push.apply(u,a||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,p=1;p<r.length;p++){var i=r[p];0!==o[i]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="/bucket/";var p=this["webpackJsonpbucketlist-app"]=this["webpackJsonpbucketlist-app"]||[],i=p.push.bind(p);p.push=t,p=p.slice();for(var a=0;a<p.length;a++)t(p[a]);var c=i;r()}([])</script><script src="/bucket/static/js/2.d0bc606c.chunk.js"></script><script src="/bucket/static/js/main.f395645c.chunk.js"></script></body></html>
